ui: Fix group header z-index

--- a/ui/src/assets/panel_container.scss
+++ b/ui/src/assets/panel_container.scss
@@ -33,6 +33,7 @@
       &.pf-sticky {
         position: sticky;
         top: 0;
+        z-index: 1;
       }
     }
   }
